@@ -1,6 +1,7 @@
 2006-08-10  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* Added alternate iRiver H10 id, reported by Scott Call.
+	* Added SanDisk sansa m240.
 
 2006-08-07  Hubert Figuiere  <hub@figuiere.net>
 
